# libblank

./: CMakeLists.txt  PROJECT.txt  README.md  README.md.tmpl  clean.sh  rename.sh  run.sh
prv/ext/cmake/src/test/: CMakeLists.txt
prv/ext/conan/: conanfile.py
prv/ext/npm/src/node-main/: CMakeLists.txt
prv/ext/npm/src/node-main/cpp/: main.cpp
prv/ext/npm/src/node-test/: CMakeLists.txt
prv/ext/npm/src/node-test/js/: test.js
prv/ext/pip/: setup.py
prv/ext/pip/src/py/: CMakeLists.txt
prv/ext/pip/src/pytest/: CMakeLists.txt
prv/ext/pip/src/pytest/py/: test.py
prv/sh/: uninstall.sh
prv/test/: Dockerfile  docker.sh
src/main/: CMakeLists.txt
